--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
         <div class="dropdown-container">
             <label for="songsDropdown">Vs Impostor Songs:</label>
             <select id="songsDropdown">
-                <option value="01. Lemon lime.mp3">01. Lemon lime.mp3</option>
-                <option value="02. Chlorophyll.mp3">02. Chlorophyll.mp3</option>
-                <option value="03. Inflorescence Hotmix.mp3">03. Inflorescence Hotmix.mp3</option>
-                <option value="04. Stargazer.mp3">04. Stargazer.mp3</option>
+                <option value="1. Menu.mp3">1. Menu.mp3</option>
+                <option value="2. Where Are You.mp3">2. Where Are You.mp3</option>
+                <option value="3. Eruption.mp3">3. Eruption.mp3</option>
+                <option value="4. Kaio-Ken.mp3">4. Kaio-Ken.mp3</option>
+                <option value="5. What's New.mp3">5. What's New.mp3</option>
+                <option value="6. Blast.mp3">6. Blast.mp3</option>
+                <option value="7. Super Saiyan.mp3">7. Super Saiyan.mp3</option>
+                <option value="9. God Eater.mp3">9. God Eater.mp3</option>
+                <option value="10. Soothing Power.mp3">10. Soothing Power.mp3</option>
+                <option value="11. Thunderstorm.mp3">11. Thunderstorm.mp3</option>
+                <option value="12. Dissasembler.mp3">12. Dissasembler.mp3</option>
+                <option value="13. Astral Calamity.mp3">13. Astral Calamity.mp3</option>
+                <option value="14. Talladega.mp3">14. Talladega.mp3</option>
             </select>
         </div>
         <div id="songTitle" class="song-title"></div>
